[Mod] update setup.cfg details

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,22 @@
 [metadata]
 name = vnpy_novastrategy
 version = attr: vnpy_novastrategy.__version__
-license = MIT
-author = Xiaoyou Chen
-author_email = xiaoyou.chen@mail.vnpy.com
+author = VeighNa Global
+author_email = veighna@hotmail.com
 description = Nova strategy application for VeighNa quant trading framework.
 long_description = file: README.md
 long_description_content_type = text/markdown
+url = https://www.github.com/veighna-global
+license = MIT
+license_files = LICENSE
 keywords =
     quant
     quantitative
     investment
     trading
     algotrading
+    crypto
+    btc
 classifiers =
     Development Status :: 5 - Production/Stable
     Operating System :: Microsoft :: Windows
